# wav-to-aac-converter

./: .coverage  .gitignore  AGENTS.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  LICENSE  README.md  audio_processing.py  convert.py  cover_art.py  filename_examples.txt  filename_improvements.txt  metadata.py  pyproject.toml  test_convert.py  test_new_patterns.py  utils.py
.github/workflows/: test.yml
src/: __init__.py  audio_processing.py  convert.py  cover_art.py  metadata.py  utils.py
tests/: test_convert.py
